Fixed song-comment overflow. commentBody has break-word

--- a/frontend/src/components/AddComment/AddComment.css
+++ b/frontend/src/components/AddComment/AddComment.css
@@ -13,6 +13,6 @@ input.commentBody {
   outline: none;
 }
 
-input.emptyCommentField {
+input.songCommentFieldErr {
   border: 2px solid red;
 }
